##---------------------------------------------------------------------------
## Author:      Rasbats aka. Mike Rossiter
## Copyright:
## License:     wxWidgets License
##---------------------------------------------------------------------------

# define minimum cmake version
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)

PROJECT(LIVI_Depth_model_pi)

SET(PACKAGE_NAME LIVI_Depth_model_pi)
SET(VERBOSE_NAME LIVI_Depth_model)
SET(TITLE_NAME Depth_model)
SET(CPACK_PACKAGE_CONTACT "LIVI - Liikennevirasto")

SET(VERSION_MAJOR "0")
SET(VERSION_MINOR "10")
SET(VERSION_PATCH "2d7ffb4")
SET(VERSION_DATE "2018-11-27")
# Version release notes:
# 0.10
#   Now shows depth values next to cursor on the map. Value is shown where the 
#       model has sensible values. Format is"current (systemcorrected + water level)".
#   Icon updated to comply more with the general OpenCPN icon style.
# 0.(0)9
#   Added water level variables Current water level, and Vertical reference system offset.
#       These are used with Colour relief chrats with five, of two depth ranges.
#   File generation tab has now info for Current, and To-be-generated options
#   Fixed bug, where five, and two colour range depths were loaded from config into the UI
#        as integers instead of doubles, thus getting the decimals truncated off at plugin startup.
#   Fixed "on the fly changing" of the chart type, where tweaking UI chartType field
#       caused the chart type to change unwantedly.
# Known problems
#   Colouring option Colour relief / Sliding colours is not implemented
# 0.(0)8
#   Fixed requirement of running OpenCPN as administrator, in order to use Depth model.
#       The changing files are now saved under wxStandardPaths::Get().GetUserDataDir(), 
#       which is platform-independent. In Win10 we end up with 
#       C:\Users\YOURUSERNAME\AppData\Roaming\opencpn\plugins\LIVI_Depth_model_pi\data
#   Fixed "yellow stripes". That is, corrected gdal usage, so that there will be no faulty 
#       intermediate colours outside of what the user has fed anymore.
#   Fixed Colour changes in UI kicking in only after second click of "Generate image".
#   Fixed failure/crash at generating a chart with Plain visualization type.
#   Second shot at fixing weird problem, where the plugin icon was randomly shown or not shown at OCPN toolbar.
#   (Leading zero removed from the minor version number, as the number was interpreted as octal, and thus there could be no 08.)
# 0.07
#    Fixed weird problem, where the plugin icon was randomly shown or not shown at OCPN toolbar.
#    Fixed colour config values not getting saved.
#    Fixed the chart image not updating at "Generate image" click.
#    Fixed colour configuration values not propagating further from the UI.
#    Fixed opaqueness of "two colours/too shallow". Now has half transparency insteaf of being fully opaque.
#    Fixed Too transparent "five colours/deep enough" colouring. Opaqueness value changed from 16 to 32.
#    Added ini file writing at "Generate Image" click.
#    Added "Clear image" button, to switch depth model chart drawing off.
#    Added *.png to chart file filters.
#    Added some logging.
#    Disabled Hillshade tab fields, as they currently are not taken to the backend.
# 0.06
#    Cropping, and stabilizing.
#    The drawn chart is now cropped nicely.
#    No more memory related crashings on zoom in, or crash on zoom out of the chart.
# 0.05
#
#
SET(GDAL_VERSION "2.3.1") # Just telling aloud the used GDAL version. No package-retrieval system here for now.
SET(PROJ_VERSION "5.1.0") # Just telling aloud the used PROJ version. No package-retrieval system here for now.
SET(HDF5_VERSION "1.10.3") # Just telling aloud the used HDF5 version. No package-retrieval system here for now.

#SET(CMAKE_BUILD_TYPE Debug)
SET( wxWidgets_USE_DEBUG OFF)
SET( wxWidgets_USE_UNICODE ON)
SET( wxWidgets_USE_UNIVERSAL OFF)
SET( wxWidgets_USE_STATIC OFF)

INCLUDE("cmake/PluginConfigure.cmake")

SET(SRC_LIVI_Depth_model
        src/LIVI_Depth_model_pi.h
        src/LIVI_Depth_model_pi.cpp
        src/icons.h
        src/icons.cpp
        src/LIVI_Depth_model_pi_UI.h    # generated by wxFormWidgets
        src/LIVI_Depth_model_pi_UI.cpp  # generated by wxFormWidgets
        src/LIVI_Depth_model_pi_UI_impl.h
        src/LIVI_Depth_model_pi_UI_impl.cpp
        src/dm_API.h
        src/dm_API.cpp
        src/dm_types.h
        src/dmColourfileHandler.h
        src/dmColourfileHandler.cpp
        src/dmConfigHandler.h
        src/dmConfigHandler.cpp
        src/dmDataset.h
        src/dmDataset.cpp
        src/NavFunc.h
        src/NavFunc.cpp
        src/dmDepthModelDrawer.h
        src/dmDepthModelDrawer.cpp
        src/dmDepthProfile.h
        src/dmDepthProfile.cpp
        src/dmDepthsViewerUI.h   # generated by wxFormWidgets
        src/dmDepthsViewerUI.cpp # generated by wxFormWidgets
        src/dmDepthsViewerUI_impl.h
        src/dmDepthsViewerUI_impl.cpp
        src/dmDrawingState.h
        src/dmDrawingState.cpp
        src/dmExtent.h
        src/dmExtent.cpp
        src/ocpn_plugin.h
        src/tinyxml.cpp
        src/tinyxmlerror.cpp
        src/tinyxmlparser.cpp
        src/tinyxml.h
    )


ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_LIVI_Depth_model})

# GDAL related headers and libraries
target_include_directories(${PACKAGE_NAME} PRIVATE C:/warmerda/bld/include/)
target_link_libraries(${PACKAGE_NAME} 
        debug       C:/proj-5.1.0/build/lib/Debug/proj_5_0_d.lib
        optimized   C:/proj-5.1.0/build/lib/Release/proj_5_0.lib)
target_link_libraries(${PACKAGE_NAME} C:/gdal-2.3.1/gdal_i.lib)
ADD_DEFINITIONS(-DTIXML_USE_STL)

INCLUDE("cmake/PluginInstall.cmake")
INCLUDE("cmake/PluginLocalization.cmake")
INCLUDE("cmake/PluginPackage.cmake")
